--- a/dayone.html
+++ b/dayone.html
@@ -2,9 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>
-        Basic II
-    </title>
+    <title>Basic II</title>
 </head>
 <body>
     <table> 
@@ -18,29 +16,20 @@
         </thead>
         <tbody>
             <tr>
-                <td>
-                    Brendan
-                </td>
-                <td>
-                    Stanton
-                </td>
-                <td>
-                    brendanrocks@gmail.com
-                </td>
-                <td> 
-                    FakePassword123 
-                </td>
+                <td>Brendan</td>
+                <td>Stanton</td>
+                <td>brendanrocks@gmail.com</td>
+                <td> FakePassword123 </td>
             </tr>
         </tbody>
     </table>
-    <h1>
-        Here is a list of my favorite things:
-    </h1>
+    <h1>Here is a list of my favorite things:</h1>
     <ul>
         <li>Food</li>
         <li>Bandwidth</li>
         <li>Coffee</li>
         <li>Beach</li>
     </ul>
-    </body>
+</body>
 </html>
+
