--- a/form.html
+++ b/form.html
@@ -18,7 +18,7 @@
         }
 
     /*Dope Styling*/
-        body, form {
+        body {
             padding: 4em;
             background: #e5e5e5;
             font: 13px/1.4 Geneva, 'Lucida Sans', 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;
