--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
     <style type="text/css">
         /*Text Styling*/
         p {
-            display: block
+            display: block;
         }
 
         #blogtext {
