--- a/blog.html
+++ b/blog.html
@@ -5,51 +5,7 @@
     <title>Jason Wang's Blog</title>
     <meta charset="utf-8">
     <meta name="description" content="A fake blog created by a Jason Wang, a bootcamp student, utilizing stricly HTML and CSS.">
-    <style type="text/css">
-        /*Text Styling*/
-        p {
-            display: block;
-        }
-
-        #blogtext {
-            text-align: justify;
-            width: 600px;
-        }
-
-        /*Body Styling*/
-        body {
-            padding: 4em;
-            background: #e5e5e5;
-            font: 14px/1.5 Geneva, 'Lucida Sans', 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;
-        }
-
-        label {
-            display: block;
-        }
-
-        input {
-            border: 5px solid #c4c4c4;
-            border-radius: 5px;
-            background-color: #fff;
-            padding: 5px 5px;
-            box-shadow: inset 0 3px 6px rgba(0, 0, 0, 0.1);
-            width: 250px;
-        }
-
-        /*Table Styling*/
-        table {
-            border: 2px solid #555;
-            border-collapse: collapse;
-            font: 16px "Lucida Grande", "Helvetica", "Arial", sans-serif;
-        }
-
-        th,
-        td {
-            border: 1px solid #bbb;
-            padding: 2px 8px 0;
-            text-align: center;
-        }
-    </style>
+    <link rel="stylesheet" href="blogstyle.css">
 </head>
 
 <body>
