--- a/blockchallenge.html
+++ b/blockchallenge.html
@@ -8,37 +8,13 @@
 
 <body>
     <h1>Display our blocks!</h1>
-    <div id="headerimage"></div>
-    <div id="headerimage2"></div>
-    <div id="row">
-        <div id="column">
-            <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
-        </div>
-        <div id="column">
-            <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
-        </div>
-        <div id="column">
-            <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
-        </div>
-        <div id="column">
-            <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
-        </div>
+    <div id="headerimage">
+        <img src="images/github.jpg" alt="Github Cats">
     </div>
-    <div id="row">
-        <div id="column">
-            <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
-        </div>
-        <div id="column">
-            <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
-        </div>
-        <div id="column">
-            <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
-        </div>
-        <div id="column">
-            <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
-        </div>
+    <div id="headerimage2">
+        <img src="images/catandninja.png" alt ="Cat and Ninja">
     </div>
-    <div id="row">
+    <div id="column">
         <div id="picture">
             <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
         </div>
@@ -52,7 +28,35 @@
             <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
         </div>
     </div>
-    <div id="row">
+    <div id="column2">
+        <div id="picture">
+            <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
+        </div>
+        <div id="picture">
+            <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
+        </div>
+        <div id="picture">
+            <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
+        </div>
+        <div id="picture">
+            <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
+        </div>
+    </div>
+    <div id="column">
+        <div id="picture">
+            <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
+        </div>
+        <div id="picture">
+            <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
+        </div>
+        <div id="picture">
+            <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
+        </div>
+        <div id="picture">
+            <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
+        </div>
+    </div>
+    <div id="column4">
         <div id="picture">
             <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
         </div>
