--- a/blockchallenge.html
+++ b/blockchallenge.html
@@ -9,67 +9,81 @@
 <body>
     <h1>Display our blocks!</h1>
     <div id="headerimage">
-        <img src="images/github.jpg" alt="Github Cats">
+        <img src="images/github.jpg" alt="Github Cats" class="head">
     </div>
     <div id="headerimage2">
-        <img src="images/catandninja.png" alt ="Cat and Ninja">
+        <img src="images/catandninja.png" alt ="Cat and Ninja" class="head">
     </div>
-    <div id="column">
-        <div id="picture">
-            <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
+    <div id="container">
+        <div id="column">
+            <div class="picture">
+                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
+            </div>
+            <div class="picture">
+                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
+            </div>
+            <div class="picture">
+                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
+            </div>
+            <div class="picture">
+                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
+            </div>
         </div>
-        <div id="picture">
-            <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
+        <div id="altcolumn">
+            <div class="picture2">
+                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
+            </div>
+            <div class="picture2">
+                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
+            </div>
+            <div class="picture2">
+                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
+            </div>
+            <div class="picture2">
+                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
+            </div>
         </div>
-        <div id="picture">
-            <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
+        <div id="column">
+            <div class="picture">
+                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
+            </div>
+            <div class="picture">
+                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
+            </div>
+            <div class="picture">
+                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
+            </div>
+            <div class="picture">
+                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
+            </div>
         </div>
-        <div id="picture">
-            <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
-        </div>
-    </div>
-    <div id="column2">
-        <div id="picture">
-            <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
-        </div>
-        <div id="picture">
-            <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
-        </div>
-        <div id="picture">
-            <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
-        </div>
-        <div id="picture">
-            <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
-        </div>
-    </div>
-    <div id="column">
-        <div id="picture">
-            <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
-        </div>
-        <div id="picture">
-            <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
-        </div>
-        <div id="picture">
-            <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
-        </div>
-        <div id="picture">
-            <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
-        </div>
-    </div>
-    <div id="column4">
-        <div id="picture">
-            <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
-        </div>
-        <div id="picture">
-            <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
-        </div>
-        <div id="picture">
-            <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
-        </div>
-        <div id="picture">
-            <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
-        </div>
-    </div><!-- end of wrapper -->
+        <div id="altcolumn">
+            <div class="picture2">
+                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
+            </div>
+            <div class="picture2">
+                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
+            </div>
+            <div class="picture2">
+                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
+            </div>
+            <div class="picture2">
+                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
+            </div>
+        <div id="altcolumn">
+            <div class="picture2">
+                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
+            </div>
+            <div class="picture2">
+                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
+            </div>
+            <div class="picture2">
+                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
+            </div>
+            <div class="picture2">
+                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
+        </div>        
+    </div><!-- end of wrapper -->    
 </body>
 
 </html>
