--- a/blockchallenge.html
+++ b/blockchallenge.html
@@ -16,16 +16,16 @@
     </div>
     <div id="container">
         <div id="column">
-            <div class="picture">
+            <div class="picture2">
                 <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
             </div>
-            <div class="picture">
+            <div class="picture2">
                 <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
             </div>
-            <div class="picture">
+            <div class="picture2">
                 <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
             </div>
-            <div class="picture">
+            <div class="picture2">
                 <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
             </div>
         </div>
@@ -58,6 +58,20 @@
             </div>
         </div>
         <div id="altcolumn">
+            <div class="picture">
+                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
+            </div>
+            <div class="picture">
+                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
+            </div>
+            <div class="picture">
+                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
+            </div>
+            <div class="picture">
+                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
+            </div>
+        </div>
+        <div id="column">
             <div class="picture2">
                 <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
             </div>
@@ -69,21 +83,9 @@
             </div>
             <div class="picture2">
                 <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
-            </div>
-        <div id="altcolumn">
-            <div class="picture2">
-                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
-            </div>
-            <div class="picture2">
-                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
-            </div>
-            <div class="picture2">
-                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
-            </div>
-            <div class="picture2">
-                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
-        </div>        
-    </div><!-- end of wrapper -->    
+            </div>        
+        </div>
+    </div>
 </body>
 
 </html>
