--- a/jaynedoe.html
+++ b/jaynedoe.html
@@ -20,7 +20,19 @@
             </div>
             <div id="about">
                 <div class="bar">About...</div>
-                <div class="box">Placeholder</div>
+                <div class="box">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sodales, mi sit amet eleifend
+                    rutrum, leo purus fringilla dui, quis commodo risus lectus at neque. Sed dui enim, semper eget ligula
+                    ac, feugiat fringilla elit. Etiam posuere purus quam, quis dignissim risus posuere lobortis. Vestibulum
+                    ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec at eros nisl. Quisque
+                    laoreet leo mauris, sagittis convallis elit volutpat nec. Donec efficitur, justo commodo tempus fermentum,
+                    nulla libero aliquet felis, vel consectetur orci leo a orci. Proin congue tempus libero sit amet vestibulum.
+                    Nullam in maximus dui. Proin turpis tellus, elementum non aliquet non, faucibus nec ante. Praesent ullamcorper
+                    odio ac ornare consequat. Nullam consectetur magna non metus egestas, eu egestas enim dictum. Maecenas
+                    a nibh lorem. Donec pharetra molestie tellus vel auctor. Phasellus gravida, risus nec ultrices mollis,
+                    ligula dui mollis ipsum, vel tristique sem purus fringilla lectus. Ut tristique malesuada diam sit amet
+                    commodo.
+
+                </div>
             </div>
         </div>
         <div id="middle">
@@ -29,34 +41,70 @@
                 <div class="image">
                     <img src="Portfolio_images/lamode.png" alt="Photo of La Mode" class="picture">
                 </div>
-                <div class="box">Placeholder</div>
+                <div class="box">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sodales, mi sit amet eleifend
+                    rutrum, leo purus fringilla dui, quis commodo risus lectus at neque. Sed dui enim, semper eget ligula
+                    ac, feugiat fringilla elit. Etiam posuere purus quam, quis dignissim risus posuere lobortis. Vestibulum
+                    ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec at eros nisl. Quisque
+                    laoreet leo mauris, sagittis convallis elit volutpat nec. Donec efficitur, justo commodo tempus fermentum,
+                    nulla libero aliquet felis, vel consectetur orci leo a orci. Proin congue tempus libero sit amet vestibulum.
+                    Nullam in maximus dui. Proin turpis tellus, elementum non aliquet non, faucibus nec ante. Praesent ullamcorper
+                    odio ac ornare consequat. Nullam consectetur magna non metus egestas, eu egestas enim dictum. Maecenas
+                    a nibh lorem. Donec pharetra molestie tellus vel auctor. Phasellus gravida, risus nec ultrices mollis,
+                    ligula dui mollis ipsum, vel tristique sem purus fringilla lectus. Ut tristique malesuada diam sit amet
+                    commodo.
+
+                </div>
             </div>
             <div class="body">
-                 <div class="bar">Family Contacts</div>
-                 <div class="image">
-                     <img src="Portfolio_images/familycontacts.png" alt="Photo of Family Contacts" class="picture">
-                 </div>
-                <div class="box">Placeholder</div>
+                <div class="bar">Family Contacts</div>
+                <div class="image">
+                    <img src="Portfolio_images/familycontacts.png" alt="Photo of Family Contacts" class="picture">
+                </div>
+                <div class="box">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sodales, mi sit amet eleifend
+                    rutrum, leo purus fringilla dui, quis commodo risus lectus at neque. Sed dui enim, semper eget ligula
+                    ac, feugiat fringilla elit. Etiam posuere purus quam, quis dignissim risus posuere lobortis. Vestibulum
+                    ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec at eros nisl. Quisque
+                    laoreet leo mauris, sagittis convallis elit volutpat nec. Donec efficitur, justo commodo tempus fermentum,
+                    nulla libero aliquet felis, vel consectetur orci leo a orci. Proin congue tempus libero sit amet vestibulum.
+                    Nullam in maximus dui. Proin turpis tellus, elementum non aliquet non, faucibus nec ante. Praesent ullamcorper
+                    odio ac ornare consequat. Nullam consectetur magna non metus egestas, eu egestas enim dictum. Maecenas
+                    a nibh lorem. Donec pharetra molestie tellus vel auctor. Phasellus gravida, risus nec ultrices mollis,
+                    ligula dui mollis ipsum, vel tristique sem purus fringilla lectus. Ut tristique malesuada diam sit amet
+                    commodo.
+
+                </div>
             </div>
             <div class="body">
                 <div class="bar">fiveEleven</div>
                 <div class="image">
                     <img src="Portfolio_images/fiveEleven.png" alt="Photo of fiveEleven" class="picture">
                 </div>
-                <div class="box">Placeholder</div>
+                <div class="box">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sodales, mi sit amet eleifend
+                    rutrum, leo purus fringilla dui, quis commodo risus lectus at neque. Sed dui enim, semper eget ligula
+                    ac, feugiat fringilla elit. Etiam posuere purus quam, quis dignissim risus posuere lobortis. Vestibulum
+                    ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec at eros nisl. Quisque
+                    laoreet leo mauris, sagittis convallis elit volutpat nec. Donec efficitur, justo commodo tempus fermentum,
+                    nulla libero aliquet felis, vel consectetur orci leo a orci. Proin congue tempus libero sit amet vestibulum.
+                    Nullam in maximus dui. Proin turpis tellus, elementum non aliquet non, faucibus nec ante. Praesent ullamcorper
+                    odio ac ornare consequat. Nullam consectetur magna non metus egestas, eu egestas enim dictum. Maecenas
+                    a nibh lorem. Donec pharetra molestie tellus vel auctor. Phasellus gravida, risus nec ultrices mollis,
+                    ligula dui mollis ipsum, vel tristique sem purus fringilla lectus. Ut tristique malesuada diam sit amet
+                    commodo.
+
+                </div>
             </div>
         </div>
         <div id="bottom">
             <div class="foot">
                 <div class="bar">Technologies</div>
                 <div class="images">
-                        <img src="Portfolio_images/ajax.png" class="picture">
-                        <img src="Portfolio_images/angular.png" class="picture">
-                        <img src="Portfolio_images/bootstrap.png" class="picture">
-                        <img src="Portfolio_images/c-sharp.png" class="picture">
-                        <img src="Portfolio_images/codeigniter.png" class="picture">
-                        <img src="Portfolio_images/codepen.png" class="picture">
-                        <img src="Portfolio_images/CSS.png" class="picture">
+                    <img src="Portfolio_images/ajax.png" class="picture">
+                    <img src="Portfolio_images/angular.png" class="picture">
+                    <img src="Portfolio_images/bootstrap.png" class="picture">
+                    <img src="Portfolio_images/c-sharp.png" class="picture">
+                    <img src="Portfolio_images/codeigniter.png" class="picture">
+                    <img src="Portfolio_images/codepen.png" class="picture">
+                    <img src="Portfolio_images/CSS.png" class="picture">
                 </div>
                 <div class="button">
                     <a href="">La Mode</a>
