--- a/form/form.html
+++ b/form/form.html
@@ -5,7 +5,7 @@
     <title>Dopest Form Ever</title>
     <meta charset="utf-8">
     <meta name="description" content="A noob form created by a Jason Wang, a bootcamp student, utilizing stricly HTML and CSS.">
-    <link rel="stylesheet" href="formstyle.css">
+    <link rel="stylesheet" href="form.css">
 </head>
 
 <body>
