--- a/blocks/blocks.html
+++ b/blocks/blocks.html
@@ -2,7 +2,7 @@
 <html lang="en">
    <head>
       <title>Position Practice</title>
-      <link rel="stylesheet" href="blockstyle.css">
+      <link rel="stylesheet" href="blocks.css">
    </head>
    <body>
        <div id="wrapper">
