--- a/blockchallenge/blockchallenge.html
+++ b/blockchallenge/blockchallenge.html
@@ -1,91 +1,51 @@
-<!DOCTYPE html>
-<html lang="en">
-
+!<!DOCTYPE html>
+<html>
 <head>
-    <title>Display our blocks!</title>
-    <link rel="stylesheet" href="blockchallenge.css">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Block Challenge</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="blockchallenge.css" />
 </head>
-
 <body>
-    <h1>Display our blocks!</h1>
-    <div id="headerimage">
-        <img src="images/github.jpg" alt="Github Cats" class="head">
-    </div>
-    <div id="headerimage2">
-        <img src="images/catandninja.png" alt ="Cat and Ninja" class="head">
-    </div>
     <div id="container">
-        <div id="column">
-            <div class="picture2">
-                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
-            </div>
-            <div class="picture2">
-                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
-            </div>
-            <div class="picture2">
-                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
-            </div>
-            <div class="picture2">
-                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
-            </div>
+        <div id="top">
+            <img src="images/github.jpg" alt="githubcat" class="pic1">
+            <h1>Display our blocks!</h1>>
+            <img src="images/catandninja.png" alt="catandninja" class="pic2">
         </div>
-        <div id="altcolumn">
-            <div class="picture2">
-                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
+        <div id="body">
+            <div id="column1">
+                <img src="images/dojocat.jpg" alt="dojocat">
+                <img src="images/coder2.jpg" alt="coder2">
+                <img src="images/cherry.jpg" alt="cherry">
+                <img src="images/aidorucat.png" alt="aidorucat">
             </div>
-            <div class="picture2">
-                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
+            <div id="column2">
+                    <img src="images/heisencat.png" alt="heisencat">
+                    <img src="images/riddlocat.png" alt="riddlocat">
+                    <img src="images/oktobercat.png" alt="oktobercat">
+                    <img src="images/domo-cat.png" alt="domo-cat">
             </div>
-            <div class="picture2">
-                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
+            <div id="column3">
+                    <img src="images/linkcat.png" alt="linkcat">
+                    <img src="images/chellocat.jpg" alt="chellocat">
+                    <img src="images/mario.png" alt="mariocat">
+                    <img src="images/kantana.jpg" alt="kantana">
             </div>
-            <div class="picture2">
-                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
+            <div id="column4">
+                    <img src="images/ironcat.png" alt="ironcat">
+                    <img src="images/stormtroopocat.png" alt="stormtroopocat">
+                    <img src="images/cooler.png" alt="cooler">
+                    <img src="images/daftpunk.gif" alt="daftpunk">
             </div>
-        </div>
-        <div id="column">
-            <div class="picture">
-                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
+            <div id="column5">
+                    <img src="images/defunktocat.png" alt="defunktocat">
+                    <img src="images/visionary.jpg" alt="visionary">
+                    <img src="images/jean-luc-picat.jpg" alt="jean-luc-picat">
+                    <img src="images/codercat.jpg" alt="codercat">
             </div>
-            <div class="picture">
-                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
-            </div>
-            <div class="picture">
-                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
-            </div>
-            <div class="picture">
-                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
-            </div>
-        </div>
-        <div id="altcolumn">
-            <div class="picture">
-                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
-            </div>
-            <div class="picture">
-                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
-            </div>
-            <div class="picture">
-                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
-            </div>
-            <div class="picture">
-                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
-            </div>
-        </div>
-        <div id="column">
-            <div class="picture2">
-                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
-            </div>
-            <div class="picture2">
-                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
-            </div>
-            <div class="picture2">
-                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
-            </div>
-            <div class="picture2">
-                <img src="images/dojocat.jpg" alt="Picture of Dojo Cat">
-            </div>        
         </div>
     </div>
 </body>
-
 </html>
